--- a/Smartketo/GoogleService-Info.plist
+++ b/Smartketo/GoogleService-Info.plist
@@ -30,5 +30,7 @@
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:641656097485:ios:033db1eb6ca1aea1513784</string>
+	<key>DATABASE_URL</key>
+	<string>https://ketoapp-74d36-default-rtdb.firebaseio.com</string>
 </dict>
 </plist>
